--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
   ],
   "license": "GPL-3.0-or-later",
   "require": {
-    "gplcart/composer-module-installer": "*"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+    "gplcart/composer-module-installer": "^1",
+    "kint-php/kint": "2.2"
+  }
 }
